--- a/index.html
+++ b/index.html
@@ -96,10 +96,63 @@
     </section>
 
     <footer id="footer" class="bg-[#E3FDFF] pt-20 rounded-t-[50px]">
-
-        <div class="bg-[#6BD2D8] p-5">
-            <p class="text-center text-white text-lg">All rights reserved. © Pita 2023</p>
+        <h2 class="mx-[7.5%] text-4xl font-bold mb-2">Nous contacter</h2>
+        <div class="flex px-[7.5%] mb-[230px]">
+            <div class="w-1/2">
+                <img src="assets/img/logo.webp" alt="Logo PITA" class="h-[450px]" />
+            </div>
+            <div class="w-1/2 flex flex-col gap-4">
+                <div class="flex gap-6">
+                    <input type="text" placeholder="Nom" class="w-full py-4 px-7 rounded-[10px] text-lg">
+                    <input type="text" placeholder="Prénom" class="w-full py-4 px-7 rounded-[10px] text-lg">
+                </div>
+                <input type="email" placeholder="Email" class="py-4 px-7 rounded-[10px] text-lg">
+                <textarea placeholder="Votre message" class="py-4 px-7 rounded-[10px] text-lg"></textarea>
+                <button class="w-fit bg-[#6BD2D8] text-white px-12 py-2 text-lg rounded-[15px] mt-2">Envoyer !</button>
+            </div>
         </div>
+
+        <div class="grid grid-cols-6 px-[7.5%] mb-[100px]">
+            <div class="col-span-2">
+                <h1 class="text-8xl	uppercase mb-14">Pita</h1>
+                <img src="assets/img/app-store.png" alt="app store" class="w-[140px] mb-4" />
+                <img src="assets/img/google-play.png" alt="google play store" class="w-[140px]" />
+            </div>
+            <div>
+                <h3 class="text-2xl	font-bold mb-8">Aide</h3>
+                <ul class="flex flex-col gap-4">
+                    <li>Centre d’aide</li>
+                    <li>Hôte</li>
+                    <li>Convive</li>
+                    <li>Confiance et sécurité</li>
+                </ul>
+            </div>
+            <div>
+                <h3 class="text-2xl	font-bold mb-8">Politique</h3>
+                <ul class="flex flex-col gap-4">
+                    <li>Politique de confidentialité</li>
+                    <li>Politique des cookies</li>
+                    <li>Paramètres des cookies</li>
+                    <li>Termes et conditions</li>
+                    <li>Conditions de vente</li>
+                </ul>
+            </div>
+            <div class="col-span-2">
+                <h3 class="text-2xl	font-bold mb-8">Je veux être informé des actualités Pita</h3>
+
+                <div class="flex flex-col gap-6">
+                    <input type="text" placeholder="Nom" class="py-4 px-7 rounded-[10px] text-lg">
+                    <button class="w-fit bg-[#6BD2D8] text-white px-12 py-2 text-lg rounded-[15px]">Je m'inscris</button>
+                    <div class="flex gap-7 mt-2">
+                        <img src="assets/icons/instagram.svg" alt="icon instagram" class="w-7 h-7" />
+                        <img src="assets/icons/tiktok.svg" alt="icon tiktok" class="w-7 h-7" />
+                        <img src="assets/icons/linkedin.svg" alt="icon linkedin" class="w-7 h-7" />
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <p class="bg-[#6BD2D8] p-5 text-center text-white text-lg">All rights reserved. © Pita 2023</p>
     </footer>
 </body>
 </html>
