--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
     <section class="flex mt-[275px] ml-[calc(7.5%+20px)]">
         <div class="w-1/2 pr-[100px]">
-            <h2 class="font-bold text-6xl">La Food étudiante réinventée</h2>
+            <h2 class="font-bold text-6xl mt-16">La Food étudiante réinventée</h2>
             <br />
             <p>Manger mieux, économiser, rencontrer de nouvelles personnes sur vos campus universitaires grâce à l'application PITA. Reçois chez toi ou va chez un cuisinier en herbe pour partager un repas fait maison et à moindre coût !</p>
             <a href="#footer" class="inline-block h-[50px] mt-16 px-11 bg-[#97C747] text-white rounded-[15px] leading-[50px]">Rejoins la commu !</a>
         </div>
-        <div class="w-1/2 bg-[#E6FFBE] h-[660px] rounded-l-[25px]">
+        <div class="w-1/2 bg-[#E6FFBE] h-[600px] rounded-l-[25px]">
             <!-- mockup -->
         </div>
     </section>
