--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <h3 class="text-2xl	font-bold mb-8">Je veux être informé des actualités Pita</h3>
 
                 <div class="flex flex-col gap-6">
-                    <input type="text" placeholder="Nom" class="py-4 px-7 rounded-[10px] text-lg">
+                    <input type="text" placeholder="Email" class="py-4 px-7 rounded-[10px] text-lg">
                     <button class="w-fit bg-[#6BD2D8] text-white px-12 py-2 text-lg rounded-[15px]">Je m'inscris</button>
                     <div class="flex gap-7 mt-2">
                         <img src="assets/icons/instagram.svg" alt="icon instagram" class="w-7 h-7" />
