--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <li>Conditions de vente</li>
                 </ul>
             </div>
-            <div class="col-span-2">
+            <div class="col-span-2 ml-10">
                 <h3 class="text-2xl	font-bold mb-8">Je veux être informé des actualités Pita</h3>
 
                 <div class="flex flex-col gap-6">
