--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Pita</title>
+    <link rel="icon" href="assets/img/favicon.webp">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <nav class="fixed z-10 top-[50px] left-[7.5%] right-[7.5%] flex justify-between items-center py-6 px-12 bg-white rounded-3xl drop-shadow-[0_4px_50px_rgba(0,0,0,0.25)]">
+    <nav class="fixed z-10 top-[30px] left-[2%] right-[2%] lg:top-[50px] lg:left-[7.5%] lg:right-[7.5%] flex justify-between items-center py-6 px-6 lg:px-12 bg-white rounded-3xl drop-shadow-[0_4px_50px_rgba(0,0,0,0.25)]">
         <h1 class="text-5xl uppercase">Pita</h1>
 
         <ul class="flex items-center gap-14 text-lg">
             <li class="cursor-pointer"><a href="#avatanges">Avantages</a></li>
             <li class="cursor-pointer"><a href="#histoire">Notre histoire</a></li>
-            <li class="cursor-pointer"><a href="#footer">Nous contacter</a></li>
+            <!-- <li class="cursor-pointer"><a href="#contact">Nous contacter</a></li>-->
             <li>
                 <a href="#footer" class="inline-block h-[50px] px-11 bg-[#97C747] text-white rounded-[15px] leading-[50px]">Rejoins la commu !</a>
             </li>
@@ -27,8 +28,8 @@
             <p>Manger mieux, économiser, rencontrer de nouvelles personnes sur vos campus universitaires grâce à l'application PITA. Reçois chez toi ou va chez un cuisinier en herbe pour partager un repas fait maison et à moindre coût !</p>
             <a href="#footer" class="inline-block h-[50px] mt-16 px-11 bg-[#97C747] text-white rounded-[15px] leading-[50px]">Rejoins la commu !</a>
         </div>
-        <div class="w-1/2 bg-[#E6FFBE] h-[600px] rounded-l-[25px]">
-            <!-- mockup -->
+        <div class="w-1/2 flex justify-center bg-[#E6FFBE] h-[600px] rounded-l-[25px]">
+            <img src="assets/img/mockup.webp" alt="mockup" loading="lazy" class="h-full" />
         </div>
     </section>
 
@@ -38,25 +39,29 @@
         <div class="w-full flex justify-around px-[160px] py-[100px] bg-[#E3FDFF] rounded-[25px] mb-[200px]">
             <div class="w-[230px] flex flex-col items-center gap-[55px]">
                 <div class="w-[100px] h-[100px] flex justify-center items-center">
-                    <img src="assets/icons/food-bank.svg" alt="Icon food bank" />
+                    <img src="assets/icons/food-bank.svg" alt="Icon food bank" loading="lazy" />
                 </div>
                 <p class="text-center">Diversifie tes plats, <strong>profite d’un bon repas</strong> ou fais découvrir tes talents de cuistot.</p>
             </div>
             <div class="w-[230px] flex flex-col items-center gap-[55px]">
                 <div class="w-[100px] h-[100px] flex justify-center items-center">
-                    <img src="assets/icons/users.svg" alt="Icon food bank" />
+                    <img src="assets/icons/users.svg" alt="Icon food bank" loading="lazy" />
                 </div>
                 <p class="text-center">Fais de <strong>nouvelles connaissances</strong> dès l’arrivée sur ton nouveau campus ou dans ta nouvelle ville.</p>
             </div>
             <div class="w-[230px] flex flex-col items-center gap-[55px]">
                 <div class="w-[100px] h-[100px] flex justify-center items-center">
-                    <img src="assets/icons/wallet.svg" alt="Icon food bank" />
+                    <img src="assets/icons/wallet.svg" alt="Icon food bank" loading="lazy" />
                 </div>
                 <p class="text-center">Cumule des avantages et <strong>bénéficie de réductions</strong> pour que les fins de mois ne soient plus un cauchemar. </p>
             </div>
         </div>
 
-        <div>mockup</div>
+        <div class="flex justify-center gap-20">
+            <img src="assets/img/mockup-mobile-1.webp" alt="mockup mobile 1" />
+            <img src="assets/img/mockup-mobile-2.webp" alt="mockup mobile 2" />
+            <img src="assets/img/mockup-mobile-3.webp" alt="mockup mobile 3" />
+        </div>
     </section>
 
     <section class="mx-[7.5%] pt-[230px]">
@@ -64,21 +69,21 @@
 
         <div class="grid grid-cols-3 gap-16">
             <div class="relative text-lg py-5 px-6 ml-[60px] bg-[#E6FFBE] rounded-[25px]">
-                <img src="assets/img/leane.webp" alt="photo de Léane" class="w-[140px] h-[140px] rounded-full absolute top-0 left-0 -translate-y-1/3 -translate-x-1/3" />
+                <img src="assets/img/leane.webp" alt="photo de Léane" loading="lazy" class="w-[140px] h-[140px] rounded-full absolute top-0 left-0 -translate-y-1/3 -translate-x-1/3" />
                 <div class="ml-20">
                     <h3 class="font-bold mb-3">Léane, étudiante à Bordeaux</h3>
                     <p>“La cuisine a toujours été un sujet important de ma vie étudiante. Parfois j’aimerais mieux manger, mais je ne trouve ni le temps, ni l’envie (et parfois ni l’argent aussi...).”</p>
                 </div>
             </div>
             <div class="relative text-lg py-5 px-6 ml-[60px] bg-[#E6FFBE] rounded-[25px]">
-                <img src="assets/img/clement.webp" alt="photo de Clément" class="w-[140px] h-[140px] rounded-full absolute top-0 left-0 -translate-y-1/3 -translate-x-1/3" />
+                <img src="assets/img/clement.webp" alt="photo de Clément" loading="lazy" class="w-[140px] h-[140px] rounded-full absolute top-0 left-0 -translate-y-1/3 -translate-x-1/3" />
                 <div class="ml-20">
                     <h3 class="font-bold mb-3">Clément, étudiant à Orléans</h3>
                     <p>“Quand je cuisine, c’est principalement pour me nourrir. J’essaie quand même de faire des plats diversifiés. J’aime bien recevoir des amis et leur préparer à manger.”</p>
                 </div>
             </div>
             <div class="relative text-lg py-5 px-6 ml-[60px] bg-[#E6FFBE] rounded-[25px]">
-                <img src="assets/img/alexis.webp" alt="photo d'Alexis" class="w-[140px] h-[140px] rounded-full absolute top-0 left-0 -translate-y-1/3 -translate-x-1/3" />
+                <img src="assets/img/alexis.webp" alt="photo d'Alexis" loading="lazy" class="w-[140px] h-[140px] rounded-full absolute top-0 left-0 -translate-y-1/3 -translate-x-1/3" />
                 <div class="ml-20">
                     <h3 class="font-bold mb-3">Alexis, chargé de com au Mans</h3>
                     <p>“Je viens à peine de rentrer dans la vie active dans une toute nouvelle ville. Ça fait beaucoup de changements d’un coup et je sais pas trop où rencontrer du monde. Par contre je suis plutôt bon cuisinier.”</p>
@@ -87,36 +92,43 @@
         </div>
     </section>
 
-    <section id="histoire" class="flex ml-[calc(7.5%+20px)] mr-[7.5%] pt-[230px] mb-[230px]">
+    <section id="histoire" class="flex ml-[calc(7.5%+20px)] mr-[7.5%] pt-[230px]">
         <div class="w-1/2 pr-[100px]">
             <h2 class="text-4xl font-bold mb-20">Notre histoire</h2>
             <p class="text-lg">Nous sommes un groupe de 6 étudiants concernés et impliqués dans la problématique de pouvoir manger mieux, mais surtout à sa faim. Nous avons repensé la manière de consommer sa nourriture tout en liant qualité, convivialité et rentabilité. Ainsi nous souhaitons améliorer au maximum la qualité de vie des étudiants en France, souvent isolés et parfois négligés. Ensemble, nous avons créé l’application PITA dans la cadre d’un challenge organisé par notre école.</p>
         </div>
-        <div class="w-1/2 bg-gray-100"></div>
+        <div class="w-1/2">
+            <img src="assets/img/ekip.webp" alt="L'ekip" class="rounded-[25px]" />
+        </div>
     </section>
 
-    <footer id="footer" class="bg-[#E3FDFF] pt-20 rounded-t-[50px]">
-        <h2 class="mx-[7.5%] text-4xl font-bold mb-2">Nous contacter</h2>
-        <div class="flex px-[7.5%] mb-[230px]">
-            <div class="w-1/2">
-                <img src="assets/img/logo.webp" alt="Logo PITA" class="h-[450px]" />
-            </div>
-            <div class="w-1/2 flex flex-col gap-4">
-                <div class="flex gap-6">
-                    <input type="text" placeholder="Nom" class="w-full py-4 px-7 rounded-[10px] text-lg">
-                    <input type="text" placeholder="Prénom" class="w-full py-4 px-7 rounded-[10px] text-lg">
-                </div>
-                <input type="email" placeholder="Email" class="py-4 px-7 rounded-[10px] text-lg">
-                <textarea placeholder="Votre message" class="py-4 px-7 rounded-[10px] text-lg"></textarea>
-                <button class="w-fit bg-[#6BD2D8] text-white px-12 py-2 text-lg rounded-[15px] mt-2">Envoyer !</button>
-            </div>
-        </div>
+    <div id="contact" class="pt-[230px]"></div>
+    <footer class="bg-[#E3FDFF] pt-20 rounded-t-[50px]">
+        <!-- <h2 class="mx-[7.5%] text-4xl font-bold mb-2">Nous contacter</h2>-->
+        <!-- <div class="flex px-[7.5%] mb-[230px]">-->
+        <!-- <div class="w-1/2">-->
+        <!-- <img src="assets/img/logo.webp" alt="Logo PITA" loading="lazy" class="h-[450px]" />-->
+        <!-- </div>-->
+        <!-- <form id="contact-form" class="w-1/2 flex flex-col gap-4">-->
+        <!-- <div class="flex gap-6">-->
+        <!-- <input id="lastname" type="text" placeholder="Nom" class="w-full py-4 px-7 rounded-[10px] text-lg border border-white">-->
+        <!-- <input id="firstname" type="text" placeholder="Prénom" class="w-full py-4 px-7 rounded-[10px] text-lg border border-white">-->
+        <!-- </div>-->
+        <!-- <input id="email" type="email" placeholder="Email" class="py-4 px-7 rounded-[10px] text-lg border border-white">-->
+        <!-- <textarea id="content" placeholder="Votre message" class="py-4 px-7 rounded-[10px] text-lg border border-white"></textarea>-->
+        <!-- <button id="btn-contact" class="w-fit bg-[#6BD2D8] text-white px-12 py-2 text-lg rounded-[15px] mt-2">Envoyer !</button>-->
+        <!-- </form>-->
+        <!-- </div>-->
 
-        <div class="grid grid-cols-6 px-[7.5%] mb-[100px]">
+        <div id="footer" class="grid grid-cols-6 px-[7.5%] mb-[100px]">
             <div class="col-span-2">
                 <h1 class="text-8xl	uppercase mb-14">Pita</h1>
-                <img src="assets/img/app-store.png" alt="app store" class="w-[140px] mb-4" />
-                <img src="assets/img/google-play.png" alt="google play store" class="w-[140px]" />
+                <a href="https://www.figma.com/proto/h9749J1QW3CiBzm6v8u4yo/Appli-PITA?type=design&node-id=24-277&t=CLERZX68eM5JDpWW-0&scaling=scale-down&page-id=0%3A1&starting-point-node-id=24%3A277" target="_blank" class="block mb-4">
+                    <img src="assets/img/app-store.png" alt="app store" loading="lazy" class="w-[140px]" />
+                </a>
+                <a href="https://www.figma.com/proto/h9749J1QW3CiBzm6v8u4yo/Appli-PITA?type=design&node-id=24-277&t=CLERZX68eM5JDpWW-0&scaling=scale-down&page-id=0%3A1&starting-point-node-id=24%3A277" target="_blank" class="block">
+                    <img src="assets/img/google-play.png" alt="google play store" loading="lazy" class="w-[140px]" />
+                </a>
             </div>
             <div>
                 <h3 class="text-2xl	font-bold mb-8">Aide</h3>
@@ -141,12 +153,18 @@
                 <h3 class="text-2xl	font-bold mb-8">Je veux être informé des actualités Pita</h3>
 
                 <div class="flex flex-col gap-6">
-                    <input type="email" placeholder="Email" class="py-4 px-7 rounded-[10px] text-lg">
-                    <button class="w-fit bg-[#6BD2D8] text-white px-12 py-2 text-lg rounded-[15px]">Je m'inscris</button>
+                    <form id="newsletter-form">
+                        <input id="newsletter" type="email" placeholder="Email" class="w-full py-4 px-7 rounded-[10px] text-lg border border-white mb-4">
+                        <label id="accept" class="inline-block w-full mb-6">
+                            <input id="checkbox" type="checkbox" class="mr-2" >
+                            J'accepte de recevoir la newsletter de Pita
+                        </label>
+                        <button class="w-fit bg-[#6BD2D8] text-white px-12 py-2 text-lg rounded-[15px]">Je m'inscris</button>
+                    </form>
                     <div class="flex gap-7 mt-2">
-                        <img src="assets/icons/instagram.svg" alt="icon instagram" class="w-7 h-7" />
-                        <img src="assets/icons/tiktok.svg" alt="icon tiktok" class="w-7 h-7" />
-                        <img src="assets/icons/linkedin.svg" alt="icon linkedin" class="w-7 h-7" />
+                        <img src="assets/icons/instagram.svg" alt="icon instagram" loading="lazy" class="w-7 h-7" />
+                        <img src="assets/icons/tiktok.svg" alt="icon tiktok" loading="lazy" class="w-7 h-7" />
+                        <img src="assets/icons/linkedin.svg" alt="icon linkedin" loading="lazy" class="w-7 h-7" />
                     </div>
                 </div>
             </div>
@@ -154,5 +172,7 @@
 
         <p class="bg-[#6BD2D8] p-5 text-center text-white text-lg">All rights reserved. © Pita 2023</p>
     </footer>
+
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
