hover sur les boutons

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li class="cursor-pointer"><a href="#histoire">Notre histoire</a></li>
             <!-- <li class="cursor-pointer"><a href="#contact">Nous contacter</a></li>-->
             <li>
-                <a href="#footer" class="inline-block h-[50px] px-11 bg-[#97C747] text-white rounded-[15px] leading-[50px]">Rejoins la commu !</a>
+                <a href="#footer" class="inline-block h-[50px] px-11 bg-[#97C747] text-white rounded-[15px] leading-[50px] border border-2 border-[#97C747] hover:text-[#97C747] hover:bg-white">Rejoins la commu !</a>
             </li>
         </ul>
     </nav>
@@ -27,7 +27,7 @@
             <h2 class="font-bold text-6xl mt-16">La Food étudiante réinventée</h2>
             <br />
             <p>Manger mieux, économiser, rencontrer de nouvelles personnes sur vos campus universitaires grâce à l'application PITA. Reçois chez toi ou va chez un cuisinier en herbe pour partager un repas fait maison et à moindre coût !</p>
-            <a href="#footer" class="inline-block h-[50px] mt-16 px-11 bg-[#97C747] text-white rounded-[15px] leading-[50px]">Rejoins la commu !</a>
+            <a href="#footer" class="inline-block h-[50px] mt-16 px-11 bg-[#97C747] text-white rounded-[15px] leading-[50px] border border-2 border-[#97C747] hover:text-[#97C747] hover:bg-white">Rejoins la commu !</a>
         </div>
         <div class="w-1/2 flex justify-center bg-[#E6FFBE] h-[600px] rounded-l-[25px]">
             <img src="assets/img/mockup.webp" alt="mockup" loading="lazy" class="h-full" />
@@ -160,7 +160,7 @@
                             <input id="checkbox" type="checkbox" class="mr-2" >
                             J'accepte de recevoir la newsletter de Pita
                         </label>
-                        <button class="w-fit bg-[#6BD2D8] text-white px-12 py-2 text-lg rounded-[15px]">Je m'inscris</button>
+                        <button class="w-fit bg-[#6BD2D8] text-white px-12 py-2 text-lg rounded-[15px] border border-2 border-[#6BD2D8] hover:text-[#6BD2D8] hover:bg-[#E3FDFF]">Je m'inscris</button>
                     </form>
                     <div class="flex gap-7 mt-2">
                         <img src="assets/icons/instagram.svg" alt="icon instagram" loading="lazy" class="w-7 h-7" />
