--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Pita</title>
+    <title>PITA</title>
     <link rel="icon" href="assets/img/favicon.webp">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav class="fixed z-10 top-[30px] left-[2%] right-[2%] lg:top-[50px] lg:left-[7.5%] lg:right-[7.5%] flex justify-between items-center py-6 px-6 lg:px-12 bg-white rounded-3xl drop-shadow-[0_4px_50px_rgba(0,0,0,0.25)]">
-        <h1 class="text-3xl lg:text-5xl uppercase">Pita</h1>
+        <h1 class="text-3xl lg:text-5xl uppercase">PITA</h1>
 
         <ul class="flex items-center gap-8 lg:gap-14 lg:text-lg">
             <li class="cursor-pointer"><a href="#avatanges">Avantages</a></li>
@@ -39,7 +39,7 @@
     </section>
 
     <section id="avatanges" class="mx-[7.5%] pt-[230px]">
-        <h2 class="text-4xl font-bold ml-5 mb-20">Les avantages de Pita</h2>
+        <h2 class="text-4xl font-bold ml-5 mb-20">Les avantages de PITA</h2>
 
         <div class="w-full flex flex-wrap justify-around px-[160px] py-[100px] bg-[#E3FDFF] rounded-[25px] mb-[200px]">
             <div class="w-[230px] flex flex-col items-center gap-[55px]">
@@ -136,7 +136,7 @@
 
         <div id="footer" class="grid grid-cols-4 xl:grid-cols-6 px-[7.5%] mb-[100px]">
             <div class="col-span-2">
-                <h1 class="text-8xl	uppercase mb-14">Pita</h1>
+                <h1 class="text-8xl	uppercase mb-14">PITA</h1>
                 <a href="https://www.figma.com/proto/h9749J1QW3CiBzm6v8u4yo/Appli-PITA?type=design&node-id=24-277&t=CLERZX68eM5JDpWW-0&scaling=scale-down&page-id=0%3A1&starting-point-node-id=24%3A277" target="_blank" class="block mb-4">
                     <img src="assets/img/app-store.png" alt="app store" loading="lazy" class="w-[140px]" />
                 </a>
@@ -164,14 +164,14 @@
                 </ul>
             </div>
             <div class="col-span-4 xl:col-span-2 mt-8 xl:mt-0 xl:ml-10">
-                <h3 class="text-2xl	font-bold mb-8">Je veux être informé des actualités Pita</h3>
+                <h3 class="text-2xl	font-bold mb-8">Je veux être informé des actualités PITA</h3>
 
                 <div class="flex flex-col gap-6">
                     <form id="newsletter-form">
                         <input id="newsletter" type="email" placeholder="Email" class="w-full py-4 px-7 rounded-[10px] lg:text-lg border border-white mb-4">
                         <label id="accept" class="inline-block w-full mb-6">
                             <input id="checkbox" type="checkbox" class="mr-2" >
-                            J'accepte de recevoir la newsletter de Pita
+                            J'accepte de recevoir la newsletter de PITA
                         </label>
                         <button class="w-fit bg-[#6BD2D8] text-white px-12 py-2 lg:text-lg rounded-[15px] border border-2 border-[#6BD2D8] hover:text-[#6BD2D8] hover:bg-[#E3FDFF]">Je m'inscris</button>
                     </form>
@@ -184,7 +184,7 @@
             </div>
         </div>
 
-        <p class="bg-[#6BD2D8] p-5 text-center text-white lg:text-lg">All rights reserved. © Pita 2023</p>
+        <p class="bg-[#6BD2D8] p-5 text-center text-white lg:text-lg">All rights reserved. © PITA 2023</p>
     </footer>
 
     <script src="assets/js/app.js"></script>
